# goit_web_hw06

./: README.md  custom_faker.py  insert_fake_data.py  pyproject.toml  register.db  register.sql
python_queries/: query_01.py  query_02.py  query_03.py  query_04.py  query_05.py  query_06.py  query_07.py  query_08.py  query_09.py  query_10.py  query_11.py  query_12.py
sql_queries/: query_01.sql  query_02.sql  query_03.sql  query_04.sql  query_05.sql  query_06.sql  query_07.sql  query_08.sql  query_09.sql  query_10.sql  query_11.sql  query_12.sql
